--- a/site/css/style.css
+++ b/site/css/style.css
@@ -59,6 +59,11 @@
     text-transform: uppercase;
   }
   
+  .changeStyle {
+    backdrop-filter: blur(10px);
+    box-shadow: 0 0 1em yellow;
+  }
+    
   .logo {
     font-weight: 800;
     font-size: 20px;
@@ -210,7 +215,28 @@
   text-align: center;
 }
 
-/* Jogador */
+/* volei */
+.divTextoHist{
+  width: 40%;
+  height: 40%;
+  margin-left: 135px;
+  margin-top: 40px;
+}
+
+.textinhoHist{
+  color: white;
+  font-family:'minhafonte';
+  font-size: 25px;
+  text-align: center;
+}
+
+.imgHist{
+  width: 35%;
+  height: 35%;
+  margin-left: 90px;
+}
+
+/* Jogadores */
 .caixinhasJogadorM{
   margin-top: 3%;
   display: flex;
@@ -236,6 +262,7 @@
   width: 23%;
   height: 200px;
   border-radius: 30px;
+  padding-top: 1.5%;
 }
 
 .caixinhaFem{
@@ -246,8 +273,94 @@
 }
 
 .imgJogador{
-  width: 15%;
-  height: 90px;
-
+  width: 50%;
+  height: 150px;
+  display: block;
+  margin-left: auto;
+  margin-right: auto; 
 }
 
+/* Quiz */
+.textoQuiz{
+  width: 40%;
+  height: 40%;
+  margin: auto;
+  margin-top: 40px;
+  display: block;
+}
+
+.textinhoQuiz{
+  color: white;
+  font-family:'minhafonte';
+  font-size: 25px;
+  text-align: center;
+}
+
+.textoAniQuiz{
+  display: flex;
+  flex-direction: row;
+}
+
+.animacao{
+ /*  border: 1px solid green; */
+  width: 30%;
+  height: 300px;
+  margin-top: 25%;
+}
+
+.bolinha{
+  width: 100px;
+  height: 100px;
+  border-radius: 50%;
+  margin-left: 200px;
+  animation: pulaBolinha 2s ease infinite;
+}
+
+.bolinha2{
+  width: 100px;
+  height: 100px;
+  border-radius: 50%;
+  margin-left: 150px;
+  animation: pulaBolinha 2s ease infinite;
+}
+
+@keyframes pulaBolinha {
+  0%{
+    transform: scale(1,1) translateY(0);
+  }
+  5%{
+    transform: scale(1.1,0.9) translateY(0);
+  }
+  25%{
+    transform: scale(0.9,1.1) translateY(-200px);
+  }
+  50%{
+    transform: scale(1.1,0.9) translateY(0);
+  }
+  60%{
+    transform: scale(0.9,1.1) translateY(-40px);
+  }
+  70%{
+    transform: scale(1.1,0.9) translateY(0);
+  }
+  100%{
+    transform: scale(1,1) translateY(0);
+  }
+}
+
+/* Sobre mim */
+.imgDesenvolvedora{
+  margin-top: 5%;
+  margin-left: 100px;
+  width: 400px;
+  height: 350px;
+  border-radius: 50px 0% 50px 0%;
+}
+
+.textinhoDev{
+  color: white;
+  font-family:'minhafonte';
+  font-size: 25px;
+  text-align: center;
+  margin-top: 10%;
+}
