--- a/site/css/style.css
+++ b/site/css/style.css
@@ -259,9 +259,9 @@
 
 .caixinhaMasc{
   background-color: rgb(59, 122, 204);
-  width: 23%;
+  width: 18%;
   height: 200px;
-  border-radius: 30px;
+  border-radius: 70%;
   padding-top: 1.5%;
 }
 
@@ -287,6 +287,7 @@
   margin: auto;
   margin-top: 40px;
   display: block;
+  flex-direction: column;
 }
 
 .textinhoQuiz{
@@ -299,6 +300,26 @@
 .textoAniQuiz{
   display: flex;
   flex-direction: row;
+}
+
+.btnQuiz{
+  margin-top: 15%;
+  width: 25%;
+  height: 30px;
+  border-radius: 13px;
+  margin-left: 37%;
+  color: white;
+  border-color: blue;
+  background-color: #000000;
+  transition: 0.5s;
+  cursor: pointer;
+  font-family: 'minhaFonte';
+  font-weight: bold;
+  font-size: 18px;
+}
+
+.btnQuiz:hover{
+  background-color: blue;
 }
 
 .animacao{
