--- a/site/css/styleLogin.css
+++ b/site/css/styleLogin.css
@@ -1,10 +1,28 @@
-.DivImgFundo {
-    text-align: center;
-  }
+body{
+  background-image: url('..//assets/imgs/imgFundoLogin.png');
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
+.boxContainer{
+    text-align:center;
+    z-index: 999; 
+    color: white;
+    margin-left:32.9%; 
+    margin-top:20vh;
+    height: 65vh; 
+    width: 35%; 
+    position: absolute; 
+    display: flex; 
+    align-items: center; 
+    justify-content: center; 
+    background-color: rgba(250, 250, 250, 0.411); 
+    border-radius:35px;
+}
+
+h1{
+  text-align: center;
+  margin-top: -60%;
+  color: black;
   
-  .imgFundo{
-    width: 100%;
-    height: auto;
-    max-height: 800px;
-    background-size: cover;
-  }
+}
