--- a/site/css/style.css
+++ b/site/css/style.css
@@ -186,7 +186,19 @@
   }
 
   .divTextoHeader{
-    text-align:center;z-index: 999; color: white;margin-left:10%; margin-top:30vh;height: 30vh; width: 30%; position: absolute; display: flex; align-items: center; justify-content: center; background-color: rgba(140, 140, 145, 0.562); border-radius:35px;
+    text-align:center;
+    z-index: 999; 
+    color: white;
+    margin-left:10%; 
+    margin-top:30vh;
+    height: 30vh; 
+    width: 30%; 
+    position: absolute; 
+    display: flex; 
+    align-items: center; 
+    justify-content: center; 
+    background-color: rgba(46, 46, 48, 0.562); 
+    border-radius:35px;
   }
 
 /* Sobre o projeto */
@@ -246,48 +258,60 @@
 }
 
 /* Jogadores */
-.caixinhasJogadorM{
-  margin-top: 3%;
+.divTudoJogador{
+  margin-top: 2%;
   display: flex;
   flex-direction: row;
-  justify-content: space-between;
-  padding-left: 5%;
-  padding-right: 5%;
-  margin-bottom: 3%;
+  justify-content: center;
+  align-items: center;
 }
-
-.caixinhasJogadorF{
-  margin-top: 3%;
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-  padding-left: 5%;
-  padding-right: 5%;
-  margin-bottom: 3%;
-}
-
-.caixinhaMasc{
-  background-color: rgb(59, 122, 204);
-  width: 18%;
+.jogador-container {
+  width: 300px;
   height: 200px;
-  border-radius: 70%;
-  padding-top: 1.5%;
+  perspective: 1000px;
 }
 
-.caixinhaFem{
-  background-color: rgb(241, 243, 95);
-  width: 23%;
-  height: 200px;
-  border-radius: 30px;
+.flipper{
+	width: 100%;
+	height: 100%;
+  transition: transform 0.8s;
+	transform-style: preserve-3d;
+  position: relative;
+}
+
+.jogador-container:hover .flipper{
+	transform: rotatey(180deg);
+}
+
+.front{
+  position: absolute;
+  width: 80%;
+  height: 100%;
+  backface-visibility: hidden;
+}
+
+.back{
+  position: absolute;
+  width: 70%;
+  height: 80%;
+  backface-visibility: hidden;
+  border: 2px solid yellow;
+	transform: rotateY(180deg);
+  box-shadow: 1px 3px 3px 1px yellow;
 }
 
 .imgJogador{
-  width: 50%;
-  height: 150px;
-  display: block;
-  margin-left: auto;
-  margin-right: auto; 
+  border: 2px solid blue;
+  width: 80%;
+  height: 80%;
+  margin-left: 35px;
 }
+
+.textoJogador{
+  text-align: center;
+  color: white;
+}
+
 
 /* Quiz */
 .textoQuiz{
@@ -386,6 +410,7 @@
   height: 350px;
   border-radius: 50px 0% 50px 0%;
   box-shadow: 10px 5px 5px rgb(108, 108, 240);
+
 }
 
 .textinhoDev{
