--- a/site/css/styleLogin.css
+++ b/site/css/styleLogin.css
@@ -7,7 +7,6 @@ body{
 .boxContainer{
     text-align:center;
     z-index: 999; 
-    color: white;
     margin-left:32.9%; 
     margin-top:20vh;
     height: 65vh; 
@@ -16,7 +15,7 @@ body{
     display: flex; 
     align-items: center; 
     justify-content: center; 
-    background-color: rgba(250, 250, 250, 0.411); 
+    background-color: rgba(255, 255, 255, 0.404);
     border-radius:35px;
 }
 
@@ -25,4 +24,20 @@ h1{
   margin-top: -60%;
   color: black;
   
+}
+
+.tudoLogin{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.inputLogin{
+  width: 300px;
+  height: 40px;
+  border: none;
+  border-bottom: 2px solid black;
+  background-color:  transparent;
+
 }
