--- a/site/css/styleLogin.css
+++ b/site/css/styleLogin.css
@@ -1,5 +1,10 @@
+@font-face {
+  font-family:'minhafonte';
+  src:url("../assets/1Ptxg8zYS_SKggPN4iEgvnHyvveLxVtaooCPNLA3JC9c.ttf");
+}
+
 body{
-  background-image: url('..//assets/imgs/imgFundoLogin.png');
+  background-image: url('');
   background-repeat: no-repeat;
   background-size: cover;
 }
@@ -7,23 +12,19 @@ body{
 .boxContainer{
     text-align:center;
     z-index: 999; 
-    margin-left:32.9%; 
+    margin-left:32%; 
     margin-top:20vh;
     height: 65vh; 
     width: 35%; 
-    position: absolute; 
-    display: flex; 
-    align-items: center; 
-    justify-content: center; 
-    background-color: rgba(255, 255, 255, 0.404);
+   /*  background-color: rgb(47, 0, 255); */
     border-radius:35px;
+    border: 2px solid black;
 }
 
 h1{
   text-align: center;
-  margin-top: -60%;
   color: black;
-  
+  text-transform: uppercase;
 }
 
 .tudoLogin{
@@ -31,13 +32,48 @@ h1{
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  margin-top: 10vh;
+  
 }
 
-.inputLogin{
+.inputLogin, .inputSenha{
   width: 300px;
-  height: 40px;
+  height: 20px;
   border: none;
   border-bottom: 2px solid black;
   background-color:  transparent;
-
+  outline: none;
 }
+
+.inpMostrarSenha {
+  margin-right: 60%;
+  margin-top: -1vh;
+}
+
+.spanMostrarSenha {
+  margin-right: 34%;
+  margin-top: -2.9vh;
+  margin-bottom: 5%;
+}
+
+.btnEntrar{
+  margin-top: 5vh;
+  margin-bottom: 5vh;
+  width: 25%;
+  height: 30px;
+  border-radius: 13px;
+  color: black;
+  border-color: blue;
+  background-color: #ffffff;
+  transition: 0.5s;
+  cursor: pointer;
+  font-family: 'minhaFonte';
+  font-weight: bold;
+  font-size: 18px;
+}
+
+.btnEntrar:hover{
+  background-color: blue;
+  color: white;
+}
+
