--- a/site/css/styleLogin.css
+++ b/site/css/styleLogin.css
@@ -1,30 +1,28 @@
-@font-face {
-  font-family:'minhafonte';
-  src:url("../assets/1Ptxg8zYS_SKggPN4iEgvnHyvveLxVtaooCPNLA3JC9c.ttf");
-}
-
 body{
-  background-image: url('');
-  background-repeat: no-repeat;
-  background-size: cover;
+  margin: 0;
+  overflow-x: hidden;
+  overflow-y: hidden;
+  font-family: "Poppins", sans-serif;
 }
 
 .boxContainer{
-    text-align:center;
-    z-index: 999; 
-    margin-left:32%; 
-    margin-top:20vh;
-    height: 65vh; 
-    width: 35%; 
-   /*  background-color: rgb(47, 0, 255); */
-    border-radius:35px;
-    border: 2px solid black;
+    width: 100%;
+    height: 100vh;
+    display: flex;
+    flex-direction: row;
 }
 
-h1{
+.imgLogin{
+  height: 100vh;
+  width: 110%;
+}
+
+.nomeLogin{
+  font-family: poppins;
   text-align: center;
   color: black;
-  text-transform: uppercase;
+  font-weight: bold;
+  font-size: 40px;
 }
 
 .tudoLogin{
@@ -33,35 +31,66 @@ h1{
   align-items: center;
   justify-content: center;
   margin-top: 10vh;
-  
+  text-align:center;
+  z-index: 999; 
+  margin-left: 15%; 
+  margin-top:20vh;
+  height: 65vh; 
+  width: 35%; 
+  border-radius:35px;
+}
+
+.inputsLogin{
+  font-weight: bold;
+  margin-right: 40%;
+  font-size: 20px;
+  margin-left: 40%;
+}
+
+.inputsLogin .labelForm{
+  margin-right: 75%;
+  font-size: 20px;
+  font-weight: normal;
 }
 
 .inputLogin, .inputSenha{
   width: 300px;
-  height: 20px;
-  border: none;
-  border-bottom: 2px solid black;
+  height: 40%;
+  border: 1px solid black;
+  border-radius: 8px;
   background-color:  transparent;
   outline: none;
+  font-size: 18px;
+}
+
+.inputLogin:hover{
+  box-shadow: 3px 0px 3px 0px yellow;
+}
+
+.inputSenha:hover{
+  box-shadow: 3px 0px 3px 0px yellow;
 }
 
 .inpMostrarSenha {
   margin-right: 60%;
-  margin-top: -1vh;
+  margin-top: 12%;
 }
 
 .spanMostrarSenha {
-  margin-right: 34%;
-  margin-top: -2.9vh;
+  margin-right: 28%;
   margin-bottom: 5%;
+  margin-top: -4.7%;
 }
 
+.botao{
+  margin-right: 38%;
+}
 .btnEntrar{
   margin-top: 5vh;
   margin-bottom: 5vh;
-  width: 25%;
-  height: 30px;
-  border-radius: 13px;
+  width: 350%;
+  height: 40%;
+  border-radius: 10px;
   color: black;
   border-color: blue;
   background-color: #ffffff;
@@ -76,4 +105,6 @@ h1{
   background-color: blue;
   color: white;
 }
+
+
 
