--- a/public/css/styleCadastro.css
+++ b/public/css/styleCadastro.css
@@ -12,20 +12,21 @@ body{
     flex-direction: row;
 }
 
-.imgLogin{
+.imgCad{
   height: 100vh;
-  width: 100%;
+  width: 98.5%;
 }
 
-.nomeLogin{
-  font-family: poppins;
+.nomeCad{
+  font-family: Poppins;
   text-align: center;
   color: black;
   font-weight: bold;
   font-size: 40px;
+  margin-top: -40px;
 }
 
-.tudoLogin{
+.tudoCad{
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -40,22 +41,28 @@ body{
   border-radius:35px;
 }
 
-.inputsLogin{
+.inputsCad{
   font-weight: bold;
   margin-right: 40%;
   font-size: 20px;
   margin-left: 40%;
 }
 
-.inputsLogin .labelForm{
+.inputsCad .labelForm{
   margin-right: 75%;
   font-size: 20px;
   font-weight: normal;
 }
 
-.inputLogin, .inputSenha{
+.inputsCad .labelForm{
+  margin-right: 75%;
+  font-size: 20px;
+  font-weight: normal;
+}
+
+.inputCad, .inputSenha, .inputNome, .inputEstado{
   width: 300px;
-  height: 40%;
+  height: 18%;
   border: 1px solid black;
   border-radius: 8px;
   background-color:  transparent;
@@ -63,17 +70,25 @@ body{
   font-size: 18px;
 }
 
-.inputLogin:hover{
-  box-shadow: 3px 0px 3px 0px yellow;
+.inputCad:focus{
+  box-shadow: 3px 2px 0px 0px yellow;
 }
 
-.inputSenha:hover{
-  box-shadow: 3px 0px 3px 0px yellow;
+.inputSenha:focus{
+  box-shadow: 3px 2px 0px 0px yellow;
+}
+
+.inputNome:focus{
+  box-shadow: 3px 2px 0px 0px yellow;
+}
+
+.inputEstado:focus{
+  box-shadow: 3px 2px 0px 0px yellow;
 }
 
 .inpMostrarSenha {
   margin-right: 60%;
-  margin-top: 12%;
+  margin-top: 18%;
 }
 
 .spanMostrarSenha {
@@ -83,14 +98,34 @@ body{
 }
 
 .botao{
-  margin-right: 38%;
+  margin-left: 10%;
+  display: flex;
+  flex-direction: row;
+  gap: 10%;
 }
 
-.btnEntrar{
+.btnCancelar{
   margin-top: 5vh;
   margin-bottom: 5vh;
-  width: 350%;
-  height: 40%;
+  width: 200px;
+  height: 50%;
+  border-radius: 10px;
+  color: black;
+  border-color: yellow;
+  background-color: #ffffff;
+  transition: 0.5s;
+  cursor: pointer;
+  font-family: 'minhaFonte';
+  font-weight: bold;
+  font-size: 18px;
+  box-shadow: 2px 2px 0px 0px rgb(255, 255, 178);
+}
+
+.btnCadastrar{
+  margin-top: 5vh;
+  margin-bottom: 5vh;
+  width: 200px;
+  height: 50%;
   border-radius: 10px;
   color: black;
   border-color: blue;
@@ -100,9 +135,15 @@ body{
   font-family: 'minhaFonte';
   font-weight: bold;
   font-size: 18px;
+  box-shadow: 3px 3px 0px 0px rgb(216, 250, 255);
 }
 
-.btnEntrar:hover{
+.btnCancelar:hover{
+  background-color: yellow;
+  color: black;
+}
+
+.btnCadastrar:hover{
   background-color: blue;
   color: white;
 }
