--- a/public/css/styleQuiz.css
+++ b/public/css/styleQuiz.css
@@ -1,8 +1,15 @@
+@font-face {
+    font-family:'minhafonte';
+    src:url("../assets/1Ptxg8zYS_SKggPN4iEgvnHyvveLxVtaooCPNLA3JC9c.ttf");
+}
+
 body {
     margin: 0;
     background-color: #000000;
     overflow-x: hidden;
+    font-family: "minhafonte";
 }
+
 .logo {
     display: flex;
     flex-direction: row;
@@ -25,9 +32,28 @@ body {
     background-color: white;
     border-radius: 20px;
     border: 2px solid blue;
-    height: 80vh;
+    height: 200vh;
     width: 70%;
     margin: auto;
-    margin-top: 15px;
+    margin-top: 5px;
 }
+
+.divPergunta{
+    margin-top: 5%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 15px;
+    flex-direction: column;
+}
+
+.divRadios{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 15px;
+    flex-direction: row;
+}
+
+
 
