--- a/public/css/style.css
+++ b/public/css/style.css
@@ -39,6 +39,7 @@
     margin: 0;
     background-color: #000000;
     overflow-x: hidden;
+    font-family:'minhafonte';
   }
 
   ::selection{
@@ -239,6 +240,7 @@
   font-family:'minhafonte';
   font-size: 25px;
   text-align: center;
+  font-weight: lighter;
 }
 
 /* volei */
@@ -460,7 +462,7 @@ section {
 .footer-container .footer-right{
   display: inline-block;
   vertical-align: top;
-  margin-left: 5px;
+  margin-left: 80px;
 }
 
 /* Footer left */
@@ -504,7 +506,7 @@ section {
 
 .footer-container .footer-infos{
   width: 35%;
-  margin-left: 40px;
+  margin-left: -50px;
 }
 
 .footer-container .footer-infos i{
