--- a/public/css/styleQuiz.css
+++ b/public/css/styleQuiz.css
@@ -33,7 +33,7 @@ body {
     background-color: white;
     border-radius: 20px;
     border: 2px solid blue;
-    height: 230vh;
+    height: 300vh;
     width: 70%;
     margin: auto;
     margin-top: 5px;
@@ -105,6 +105,9 @@ body {
 .imgSeta{
     cursor: pointer;
 }
+
+/* GRAFICO */
+
 
 
 
