--- a/public/css/styleMulheres.css
+++ b/public/css/styleMulheres.css
@@ -75,3 +75,9 @@ h1 {
 iframe{
     box-shadow: 0 4px 8px rgb(0, 255, 0);
 }
+
+.medalhas{
+    color: white;
+    display: flex;
+    flex-direction: row;
+}
