--- a/public/css/style.css
+++ b/public/css/style.css
@@ -219,12 +219,13 @@
 .imgTexto{
   display: flex;
   flex-direction: row;
+  gap: 5%;
 }
 
 .imgPrj{
-  width: 40%;
-  height: 40%;
-  margin-left: 50px;
+  width: 28%;
+  height: 28%;
+  margin-left:10%;
 }
 
 .divTextoPrj{
