--- a/public/css/styleQuiz.css
+++ b/public/css/styleQuiz.css
@@ -32,6 +32,11 @@ body {
     font-family: "minhafonte";
 }
 
+::selection{
+  background: yellow;
+  color: black;
+}
+
 .logo {
     margin: 15px;
     display: flex;
@@ -128,7 +133,7 @@ body {
 }
 
 .divSeta{
-    margin-top: -3%;
+    margin-top: -4%;
     margin-left: 1250px;
   }
 
